# spec-1

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PORTFOLIO_SUMMARY.md  README.md  mcp_server.py  pyproject.toml  requirements.txt  spec1_ui.html
.github/: pull_request_template.md
.github/workflows/: python-package.yml
briefs/: spec1_brief_2026-04-11.md  spec1_brief_2026-04-12.md  spec1_brief_2026-04-13.md  spec1_brief_2026-04-14.md  spec1_brief_2026-04-16.md  spec1_brief_2026-04-17.md  spec1_brief_2026-04-18.md  spec1_brief_2026-04-19.md  spec1_brief_latest.md  spec1_prompts_2026-04-11.md  spec1_prompts_2026-04-16.md  spec1_prompts_2026-04-17.md  spec1_prompts_2026-04-18.md  spec1_prompts_2026-04-19.md  spec1_prompts_latest.md
docs/: index.html
scripts/: anthropic_smoke.py
src/: spec1_labels.py
src/cls_calibration/: __init__.py  aggregator.py  formatter.py  proposer.py  schemas.py
src/cls_db/: __init__.py  database.py  dual_write.py  migrate.py  models.py  repository.py
src/cls_leads/: __init__.py  formatter.py  generator.py  schemas.py  store.py
src/cls_osint/: __init__.py  feed.py  pipeline.py  schemas.py  sources.py  store.py
src/cls_osint/adapters/: __init__.py  congressional.py  fara.py  narrative.py  verifier.py
src/cls_psyop/: __init__.py  evidence.py  patterns.py  pipeline.py  schemas.py  scorer.py  store.py
src/cls_quant/: __init__.py  collector.py  indicators.py  pipeline.py  schemas.py  scorer.py  sources.py  store.py
src/cls_verdicts/: __init__.py  schemas.py  store.py
src/cls_world_brief/: __init__.py  formatter.py  producer.py  schemas.py  store.py
src/spec1_api/: __init__.py  dependencies.py  main.py  scheduler.py  schemas.py
src/spec1_api/routers/: __init__.py  brief.py  calibration.py  cycle.py  fara.py  health.py  intel.py  leads.py  psyop.py  signals.py  verdicts.py
src/spec1_engine/: __init__.py  main.py
tests/: test_analysts.py  test_api.py  test_briefing.py  test_calibration.py  test_calibration_proposer.py  test_congressional.py  test_cycle.py  test_engine.py  test_fara.py  test_feed.py  test_harvester.py  test_intelligence.py  test_leads.py  test_logging_utils.py  test_mcp_server.py  test_narrative.py  test_pdf_render.py  test_persistence.py  test_pipeline.py  test_psyop.py  test_psyop_evidence.py  test_quant.py  test_scorer.py  test_store.py  test_verdicts.py  test_verifier.py  test_workspace.py  test_world_brief.py
(+71 files in other folders)
