[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec1-engine"
version = "0.4.0"
description = "SPEC-1 Intelligence Engine — full OSINT, psyop, quant, leads, briefs, API, and MCP"
requires-python = ">=3.9"
dependencies = [
    "feedparser>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "python-dateutil>=2.8",
    "anthropic>=0.20",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "httpx>=0.27",
    "numpy>=1.24",
    "pandas>=2.0",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"spec1_engine" = ["core/prompts/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
